--- a/views/addnew.jade
+++ b/views/addnew.jade
@@ -19,6 +19,8 @@ block content
                 span.sr-only (current)
             li.nav-item
                 a.nav-link(href='/subjects/edit/users') Accounts
+            li.nav-item
+                a.nav-link(href='/subjects/approval') Item Approval
           li.nav-item.form-inline
               a.nav-link(href='/auth/logout') Log out
     .view
