--- a/views/update.jade
+++ b/views/update.jade
@@ -13,11 +13,13 @@ block content
               a.nav-link(href='/')
                 | Home 
             li.nav-item
-              a.nav-link(href='/subjects') Subjects    
+              a.nav-link(href='/portal') Subjects    
             li.nav-item
               a.nav-link(href='/subjects/addnew') Add
             li.nav-item
-                a.nav-link(href='/subjects/edit/users') Accounts
+              a.nav-link(href='/subjects/edit/users') Accounts
+            li.nav-item
+              a.nav-link(href='/subjects/approval') Item Approval
           li.nav-item.form-inline
               a.nav-link(href='/auth/logout') Log out
     .container
