--- a/views/index.jade
+++ b/views/index.jade
@@ -15,18 +15,21 @@ block content
             if (user)
               li.nav-item
                 a.nav-link(href='/portal') Subjects
+              
               if (user.acctype ==='admin')
                 li.nav-item
                   a.nav-link(href='/subjects/addnew') Add
                 li.nav-item
-                a.nav-link(href='/subjects/edit/users') Accounts
-              li.nav-item
-                a.nav-link(href='/auth/logout') Log out
+                  a.nav-link(href='/subjects/edit/users') Accounts
+                li.nav-item
+                  a.nav-link(href='/subjects/approval') Item Approval
             else
               li.nav-item
                 a.nav-link(href='/auth/login') Login
               li.nav-item
                 a.nav-link(href='/auth/register') Register
+            li.nav-item
+                a.nav-link(href='/auth/logout') Log out
     .view.hm-black-strong
       .full-bg-img.flex-center
         ul.animated.fadeInUp
