--- a/views/subjects.jade
+++ b/views/subjects.jade
@@ -15,11 +15,14 @@ block content
             li.nav-item.active
               a.nav-link(href='/portal') Subjects
                 span.sr-only (current)
+            
             if (user.acctype==='admin')
               li.nav-item
                 a.nav-link(href='/subjects/addnew') Add
               li.nav-item
                 a.nav-link(href='/subjects/edit/users') Accounts
+              li.nav-item
+                a.nav-link(href='/subjects/approval') Item Approval
           li.nav-item.form-inline
               a.nav-link(href='/auth/logout') Log out
   br
