--- a/views/users.jade
+++ b/views/users.jade
@@ -17,7 +17,9 @@ block content
             li.nav-item
               a.nav-link(href='/subjects/addnew') Add
             li.nav-item.active
-                a.nav-link(href='/subjects/edit/users') Accounts
+              a.nav-link(href='/subjects/edit/users') Accounts
+            li.nav-item
+              a.nav-link(href='/subjects/approval') Item Approval
           li.nav-item.form-inline
               a.nav-link(href='/auth/logout') Log out
   .container
