--- a/views/customlayout.jade
+++ b/views/customlayout.jade
@@ -8,6 +8,11 @@ html(lang='en')
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css')
     link(href='/css/bootstrap.min.css', rel='stylesheet')
     link(href='/css/mdb.min.css', rel='stylesheet')
-
+    style(rel='stylesheet').
+      html,
+      body,
+      .grey {
+      background: #EEEEEE;
+      }
   body
     block content
