--- a/views/landing.jade
+++ b/views/landing.jade
@@ -48,7 +48,7 @@ html(lang='en')
       color: #fff;
       }
       .view {
-      background: url("http://mdbootstrap.com/img/Photos/Horizontal/City/full%20page/img%20(1).jpg")no-repeat center center fixed;
+      background: url("./images/pexels-photo-149246.jpeg")no-repeat center center fixed;
       -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover;
